Added copy & paste keybinding (mouse also support)

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,15 @@ set -g default-terminal "tmux-256color"
 set -g history-limit 30000
 # Enable mouse 
 set -g mouse on
+## Use vim keybindings in copy mode (can use <C-b-]> to paste)
+set-option -g mouse on
+setw -g mode-keys vi
+set-option -s set-clipboard off
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 #-- Statusbar -----------------------------------------------------------------
 
 # Status refresh interval in seconds
