--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,8 @@ set -g status-left '#[fg=blue]Sess_#S'
 
 # Right shit
 #set -g status-right "#22T Up: #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") %H:%M %d-%b-%y#"
-set -g status-right '#[fg=blue,bright]  #(cat /sys/class/power_supply/BAT0/capacity)%| %H:%M:%S'
+set -g status-right '#[fg=blue,bright]BAT #(cat /sys/class/power_supply/BAT0/capacity)% | #(acpi | grep -Eo '[0-9][0-9]:[0-9][0-9]')-remaining  %H:%M:%S'
+# set -g status-right '#[fg=blue,bright]%H:%M'
 
 # Center windows
 set-option -g status-justify centre
