Use latte colortheme for conky. Update the code in conky.

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -10,7 +10,7 @@
 --
 -- For more on Lua, see:
 -- https://www.lua.org/pil/contents.html
-
+-- Color from latte.conf, https://github.com/catppuccin/conky
 conky.config = {
     alignment = 'top_right',
     background = false,
@@ -25,11 +25,34 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'DejaVu Sans Mono:size=12',
+    font = 'SauceCodeProNerdFont:bold:size=30',
+    font2 = 'SauceCodeProNerdFont:bold:size=20',
+    font3 = 'SauceCodeProNerdFont:bold:size=15',
+    font4 = 'SauceCodeProNerdFont:bold:size=12',
+    font5 = 'Noto Sans CJK TC:bold:size=12',
     gap_x = 60,
     gap_y = 60,
-    minimum_height = 5,
-    minimum_width = 4,
+    minimum_height = 200,
+    minimum_width = 260,
+	maximum_width = 260, 
+	--Graphical
+	border_inner_margin = 5,
+	border_outer_margin = 5, 		
+	border_width = 0, 				
+	default_bar_width = 100,		
+	default_bar_height = 10,		
+	default_gauge_height = 25,		
+	default_gauge_width =40,		
+	default_graph_height = 40,		
+	default_graph_width = 153,		
+	default_shade_color = '#000000',
+	default_outline_color = '#000000',	
+	draw_borders = false,				
+    draw_graph_borders = true,	
+	draw_shades = false,		
+	draw_outline = false,		
+	stippled_borders = 0,		
+
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
@@ -39,6 +62,8 @@ conky.config = {
     own_window = true,
     own_window_class = 'Conky',
     own_window_type = 'override',
+	own_window_colour = '#eff1f5', 
+	own_window_transparent = false,
     show_graph_range = false,
     show_graph_scale = false,
     stippled_borders = 0,
@@ -46,25 +71,27 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     use_xft = true,
+	--catppuccin
+	color0 = '#7287fd',
+	color1 = '#4c4f69',
+	color2 = '#1e66f5',
+	color3 = '#dc8a78',
+	color4 = '#5c5f77',
+    color5 = '#40a02b',
+    color6 = '#df8e1d',
 }
 
 conky.text = [[
-${color grey}OLD-Asus-SysInfo:
+${alignc}${color0}${font}OLD-Asus
 $hr
-
-${color1}BAT-remaining: $battery_time
-$hr
-${color grey}Uptime:$color $uptime
-${color1}CPU temp: ${execi 30 sensors | grep 'Core 1' | awk '{print $3 + 0.00}'}°C
-${color grey}CPU Frequency (in GHz):$color $freq_g
-${color grey}CPU Usage:$color $cpu% ${cpubar 4}
-${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
-${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
-${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
-$hr
-${color grey}Name              PID     CPU%   MEM%
-${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
-]]
+${color2}${font4}BAT-remaining: 
+${color6}${font3}$battery_time
+${color0}$hr
+${color1}${font4}Uptime:${color1} $uptime
+${color1}${font4}CPU temp: ${execi 30 sensors | grep 'Core 1' | awk '{print $3 + 0.00}'}°C
+${color1}${font4}${execi 30 free -h | grep 'Mem' | awk '{print "Mem is used:"$3"/"$2"."}'}
+${color0}$hr
+${color0}${font5}Now playing: 
+${color0}${font5}${execi 30 playerctl metadata --format "{{ title }}"}
+${color0}${font5}Singer: ${execi 30 playerctl metadata --format "{{ artist }}"}
+]] 
