Update the config of conky.

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,5 +1,5 @@
 -- Conky, a system monitor https://github.com/brndnmtthws/conky
---
+-- 
 -- This configuration file is Lua code. You can write code in here, and it will
 -- execute when Conky loads. You can use it to generate your own advanced
 -- configurations.
@@ -25,11 +25,12 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'SauceCodeProNerdFont:bold:size=30',
+    font = 'SauceCodeProNerdFont:bold:size=25',
     font2 = 'SauceCodeProNerdFont:bold:size=20',
     font3 = 'SauceCodeProNerdFont:bold:size=15',
     font4 = 'SauceCodeProNerdFont:bold:size=12',
     font5 = 'Noto Sans CJK TC:bold:size=12',
+    font6 = 'Noto Sans CJK TC:bold:size=16',
     gap_x = 60,
     gap_y = 60,
     minimum_height = 200,
@@ -84,8 +85,7 @@ conky.config = {
 conky.text = [[
 ${alignc}${color0}${font}OLD-Asus
 $hr
-${color2}${font4}BAT-remaining: 
-${color6}${font3}$battery_time
+${color6}${font3}${execpi 30 ~/.config/conky/bat.sh}
 ${color0}$hr
 ${color1}${font4}Uptime:${color1} $uptime
 ${color1}${font4}CPU temp: ${execi 30 sensors | grep 'Core 1' | awk '{print $3 + 0.00}'}°C
